:bug: fix flickering when hover over team_name to show team

--- a/othFrontend/src/css/HistoryPage.css
+++ b/othFrontend/src/css/HistoryPage.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
-
+    padding-bottom: 100px;
 }
 
 .bg-image {
@@ -28,6 +28,7 @@
     opacity: 0.4;
     border-radius: 0.5rem;
     overflow: hidden;
+    border: 1px solid #ffffff;
 }
 
 .tourney-card {
